--- a/june/week1/day 2/assignment2/login.css
+++ b/june/week1/day 2/assignment2/login.css
@@ -14,7 +14,7 @@ body{
 }
 
 .login-form{
-    background-color: rgba(11, 0, 0, 0.7);
+    backdrop-filter: blur(10px);
     padding: 30px;
     border-radius: 10px;
     width: 350px;
