--- a/june/week2/Holiday assignment/qr-code-generator-clone/styles.css
+++ b/june/week2/Holiday assignment/qr-code-generator-clone/styles.css
@@ -110,13 +110,16 @@ body {
 /* Left Panel */
 .main-container {
   flex: 1 1 50%;
+  min-height: 600px;
+ 
 }
 
 .card {
   background: white;
-  padding: 2rem;
+  padding: 2.5rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
 }
 
 .options {
@@ -148,6 +151,7 @@ body {
 
 .input-section {
   text-align: center;
+  margin-top: 2rem;
 }
 
 .input-section p {
@@ -416,4 +420,123 @@ input:checked + .slider:before {
   color: #2f80ed;
   text-decoration: none;
   font-weight: bold;
+}
+
+.intro-text {
+  text-align: center;
+  padding: 40px 20px 20px;
+}
+
+.intro-text h2 {
+  font-size: 32px;
+  font-weight: 800;
+  color: #111;
+  margin-bottom: 10px;
+}
+
+.intro-text p {
+  font-size: 18px;
+  color: #555;
+}
+
+.info-section {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 40px;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-side {
+  flex: 1 1 400px;
+  display: flex;
+  justify-content: center;
+}
+
+.info-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.text-side {
+  flex: 1 1 400px;
+}
+
+.text-side h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+.text-side p {
+  font-size: 16px;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.tell-more {
+  text-decoration: none;
+  color: #00aaff;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.faq-questions {
+  margin-top: 30px;
+}
+
+.faq-questions p {
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: #222;
+  font-weight: bold;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.faq-questions p:hover {
+  color: #00aaff;
+}
+/* CTA Banner */
+.cta-banner {
+  background-color: #ffe9ec;
+  padding: 60px 20px;
+  text-align: center;
+}
+
+.cta-content h2 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #111;
+  margin-bottom: 15px;
+}
+
+.highlight {
+  color: #f25d8e;
+}
+
+.cta-content p {
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 30px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cta-button {
+  background-color: white;
+  padding: 12px 24px;
+  border-radius: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #111;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #f5f5f5;
 }
